# ai-smarthome

./: .gitmodules  LICENSE  README.md  catalog-info.yaml
.claude/: settings.json
3dcam/: LICENSE.txt  a010cam.py  showimg.py
a2a-ollama/: README.md  main.py  pyproject.toml  vacation_planner_agent.py  weather_agent.py
a2a-ollama/common/server/: server.py
airflow/: README.md  cronheatpump.json  cronspot.json  spotfunction.json  spotpris.py
audio/: play.py  record.py
bgmax22002/: .gitignore  README.md  pom.xml
c64-chat-client/: README.md  c64chat.txt  index.html  main.js  test_emulator.html  vc64.js  vc64.wasm
coral-posenet/: mqttimgproc.py  pose_test.py
cytoscape-graph/: README.md  code.js  data.js  data.json  editor.js  index.html  pyproject.toml  server.py  style.css
datapipes/: README.md  cvutils.py  datapipes.py  pipecli.py  pipeconfig.proto  pipeconfig_pb2.py
dirigera/mcp_server/: README.md  pyproject.toml
dirigera/mcp_server/src/mcp_server_dirigera/: __init__.py  server.py
dirigera/pydanticai/: README.md  mcpagent.py  pyproject.toml
energy/: electricityP1.py
face/: face-30sec.py
fastai/: testheatmap.py
frontalsynth/: README.md  index.html  style.css  sync-processor.js  synth-engine.js  ui-controls.js
gemma4stt/: .gitignore  README.md  main.py  pixi.toml  streaming_tts.py  test_gemma4_audio.py
gestura/: README.md  pixi.toml
ha-mqtt/: mqttdev.py
ha-rest/: ha-kafka-consumer.py
hopsworks/: README.md  fsexample.py
iot/: nat64-dpkt.py  nat64.py  udp-server.py
js-postit/: README.md  abstracts.js  config.yaml  index.html  map.py  (+2 more)
(+248 files in other folders)
