[project]
name = "pydanticai"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "logfire>=3.16.0",
    "pydantic",
    "pydantic-ai>=0.2.4",
]

[tool.uv.sources]
pydantic = { git = "https://github.com/pydantic/pydantic", rev = "main" }
